--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 <button id="Start_Button" class="btn btn-outline-light" onclick="Start_Game();">Let's start playing!</button>
 <br><br>
-<h3 class="btn btn-secondary">Game Status: </h3>
+<h3 class="btn btn-secondary" id="Game-Status">Game Status: </h3>
 <br><br>
 <button class="btn btn-outline-primary" id="Restart" onclick="Restart();">Should we start over?</button>
 <br><br>
